<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_1"
    tools:context=".CadastroActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="310dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/btn_cadastrar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114" />

    <EditText
        android:id="@+id/inputNome"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textPersonName"
        android:paddingVertical="0dp"
        android:paddingLeft="15dp"
        android:text="@string/nome"
        android:textAllCaps="false"
        android:textColor="@color/red_1"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputTelefone"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingVertical="0dp"
        android:paddingLeft="15dp"
        android:text="@string/telefone"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="@color/red_1"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/inputNome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:inputType="textEmailAddress"
        android:paddingVertical="0dp"
        android:paddingLeft="15dp"
        android:text="@string/email"
        android:textAllCaps="false"
        android:textColor="@color/red_1"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/inputTelefone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <EditText
        android:id="@+id/inputSenha"
        android:layout_width="282dp"
        android:layout_height="51dp"
        android:background="@drawable/input_style"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:paddingVertical="0dp"
        android:paddingLeft="15dp"
        android:text="@string/senha"
        android:textAllCaps="false"
        android:textColor="@color/red_1"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@+id/inputEmail"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp" />

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="179dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/red_2"
        android:text="@string/cadastrar"
        android:textColor="@color/back"
        android:textSize="22sp"
        app:cornerRadius="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSenha" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/link_login"
        android:textColor="@color/back"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>
